--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -119,7 +119,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты.
 
-Классы: Колдун
+**Классы:** Колдун
 
 Трескучий разряд синей энергии обрушивается на существо в пределах дистанции, создавая между вами и целью постоянную дугу-молнию. Совершите дальнобойную атаку заклинанием по этому существу. При попадании цель получает 1к12 урона молнией, а в начале каждого вашего последующего хода, пока длится заклинание, вы можете использовать действие или бонусное действие, чтобы автоматически нанести цели ещё 1к12 урона молнией. Заклинание прекращает действовать, если вы потратите действие на что-либо ещё.
 
@@ -137,7 +137,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: волшебник
+**Классы:** волшебник
 
 Тонкий зелёный луч срывается с вашего указательного пальца и поражает цель, которую вы видите в пределах дистанции. Целью может быть существо, объект или творение магической силы вроде стены, созданной заклинанием силовая стена.
 
@@ -159,7 +159,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 1 час
 
-Классы: друид, рейнджер
+**Классы:** друид, рейнджер
 
 Прикоснитесь к согласному существу. Пока длится заклинание, его кожа будет выглядеть грубой, как кора, а КЗ цели не сможет стать ниже 16 вне зависимости от надетой брони.
 
@@ -191,7 +191,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 10 дней.
 
-Классы: Волшебник
+**Классы:** Волшебник
 
 Выберите заклинание не выше 5-го круга, которое вы можете сотворить на себя и со временем сотворения в 1 действие. Сотворите это заклинание — так называемое заготовленное заклинание — как часть заклинания заготовка, потратив ячейки заклинаний на оба. Однако заготовленное заклинание не оказывает эффект, пока не наступят определённые условия. Опишите условия, творя эти заклинания. К примеру, дыхание под водой, сотворённое с заготовкой, может вступить в действие, когда вы окажетесь под водой или в иной жидкости.
 
@@ -211,7 +211,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты.
 
-Классы: волшебник, чародей, бард
+**Классы:** волшебник, чародей, бард
 
 Вы меняете ход времени для не более чем шести выбранных вами существ в 40-футовом кубе в пределах дистанции. Каждая цель должна совершить спасбросок Мудрости. При провале она попадает под влияние заклинания, пока оно длится.
 
@@ -233,7 +233,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: клерик, паладин, друид, рейнджер, бард
+**Классы:** клерик, паладин, друид, рейнджер, бард
 
 Существо, которого вы коснулись, восстанавливает хитов в количестве 1к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
@@ -249,7 +249,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: клерик,  друид,  бард
+**Классы:** клерик,  друид,  бард
 
 Выбранное вами существо, которое вы видите в пределах дистанции, восстанавливает хитов в количестве 1к6 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
@@ -265,7 +265,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** до 1 часа.
 
-Классы: волшебник, чародей
+**Классы:** волшебник, чародей
 
 Заклинание делает плоть согласного существа, которого вы коснулись, твёрдой, словно камень. Пока длится заклинание, у цели устойчивость к немагическому дробящему, колющему и режущему урону. Также цель получает 25 временных хитов.
 ### <a name="_toc151741125"></a><a name="_toc158169137"></a><a name="_toc160586905"></a>Касание вампира
@@ -295,7 +295,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: волшебник, колдун
+**Классы:** волшебник, колдун
 
 Мерцающая зелёная стрела поражает цель в пределах дистанции и взрывается брызгами кислоты. Совершите дальнобойную атаку заклинанием по цели. При попадании цель получит 6к4 урона кислотой немедленно и 3к4 урона кислотой в конце своего следующего хода. При промахе стрела обрызгивает цель кислотой на половину начального урона, а в конце следующего хода урона не будет
 
@@ -311,7 +311,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 1 раунд
 
-Классы: волшебник, колдун, чародей
+**Классы:** волшебник, колдун, чародей
 
 Совершите бросок атаки заклинанием в ближнем бою, чтобы коснуться существа и атаковать его жизненную силу холодом могилы. При попадании цель получает 1к8 некротического урона и не может восстановливать хиты до начала вашего следующего хода. Это заклинание не действует на нежить или конструкции. Также это заклинание не может остановить естественную регенерацию хитов. Если вы попали этой атакой по нежити, она также получает помеху к броскам атаки по вам до конца вашего следующего хода.
 
@@ -327,7 +327,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 2 часа
 
-Классы: волшебник, колдун, клерик, чародей
+**Классы:** волшебник, колдун, клерик, чародей
 
 Коснитесь оружия, которое не обладает бонусами к броскам атаки и урона. Пока заклинание не закончилось, это оружие становится магическим оружием с бонусом +1 к броскам атаки и броскам урона.
 
@@ -343,11 +343,11 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: клерик, бард, друид
+**Классы:** клерик, бард, друид
 
 Волна исцеляющей энергии изливается из выбранной вами точки в пределах дистанции. Выберите не более шести существ в сфере радиусом 30 футов вокруг этой точки. Каждая цель восстанавливает хитов в количестве 3к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 6-го круга или выше, исцеление увеличивается на 2к10 за каждый круг ячейки выше 5-го.
+**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 6-го круга или выше, лечение увеличивается на 2к10 за каждый круг ячейки выше 5-го.
 ### <a name="_toc151741171"></a><a name="_toc158169183"></a><a name="_toc160586910"></a>Массовое лечащее слово
 *3-й круг, призывание (лечение), клерик, бард, друид*
 
@@ -359,7 +359,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: клерик, бард, друид
+**Классы:** клерик, бард, друид
 
 Вы произносите слова исцеления, и не более шести существ на ваш выбор, которых вы видите в пределах дистанции, восстанавливают хитов в количестве 3к6+ модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
@@ -375,7 +375,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 часа.
 
-Классы: рейнджер
+**Классы:** рейнджер
 
 Вы выбираете существо, которое видите в пределах дистанции, и магически отмечаете его как свою добычу. Пока длится заклинание, вы наносите цели дополнительно 1к6 урона каждый раз, когда попадаете по ней атакой оружием, и у вас преимущество к проверкам Восприятия и Выживания для поиска её. Если хитов цели снижаются до 0, прежде чем заклинание прекращает действовать, вы можете использовать бонусное действие в свой следующий ход, чтобы отметить новое существо.
 
@@ -391,7 +391,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 10 минут.
 
-Классы: волшебник, колдун, чародей
+**Классы:** волшебник, колдун, чародей
 
 Тонкие подвижные язычки пламени охватывают ваше тело, пока длится заклинание, испуская яркий свет в радиусе 10 футов и тусклый ещё на ю футов. Вы можете досрочно прекратить заклинание, потратив действие.
 
@@ -409,7 +409,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 10 минут.
 
-Классы: друид
+**Классы:** друид
 
 Вы призываете в свою свободную руку пылающий клинок. Он похож по форме и размеру на скимитар и существует, пока длится заклинание. Если вы отпустите клинок, он исчезнет, но вы можете призвать его снова бонусным действием.
 
@@ -429,7 +429,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Мгновенно
 
-Классы: рейнджер
+**Классы:** рейнджер
 
 Вы бросаете оружие или стреляете в воздух, чтобы создать конус из одинакового оружия, которое обрушивается на ваших врагов. Каждое существо в 60-футовом конусе должно преуспеть в спасброске Ловкости или получить 4к8 урона (половину урона при успехе). Тип урона соответствует оружию или боеприпасу, используемых в качестве компонента.
 
@@ -445,7 +445,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** мгновенное.
 
-Классы: рейнджер
+**Классы:** рейнджер
 
 Вы метаете немагическое оружие или стреляете немагическим боеприпасом в воздух и выбираете точку в пределах дистанции. Сотни копий использованного вами боеприпаса или оружия обрушиваются залпом с небес, а затем исчезают. Каждое существо в цилиндре радиусом 40 футов и высотой 20 футов с центром в выбранной точке должно совершить спасбросок Ловкости. Существо получает 8к8 урона при провале или половину этого урона при успехе. Тип урона тот же, что у использованного оружия или боеприпаса.
 ### <a name="_toc151741295"></a><a name="_toc158169307"></a><a name="_toc160586916"></a>Призыв скакуна
