--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -87,7 +87,7 @@ author: Антон "Palant" Палихов
 
 **Классы:** Рейнджер
 
-Вы касаетесь колчана, содержащего стрелы или болты. Когда цель поражается дальнобойной атакой оружия, использующего боеприпасы из колчана, она получает дополнительно 6к6 урона огнем. Кроме того, каждое существо (за исключением первой цели) в радиусе 20 футов от цели должно сделать спасбросок на ловкость. При неудачном спасброске цель получает 3к6 урона огняем или вдвое меньше при успешном спасброске. Магия заклинания заканчивается на боеприпасе при попадании или промахе, а заклинание заканчивается, когда из колчана будет извлечено восемь боеприпасов.
+Вы касаетесь колчана, содержащего стрелы или болты. Когда цель поражается дальнобойной атакой оружия, использующего боеприпасы из колчана, она получает дополнительно 6к6 урона огнем. Кроме того, каждое существо (за исключением первой цели) в радиусе 20 футов от цели должно сделать спасбросок на ловкость. При неудачном спасброске цель получает 3к6 урона огнем или вдвое меньше при успешном спасброске. Магия заклинания заканчивается на боеприпасе при попадании или промахе, а заклинание заканчивается, когда из колчана будет извлечено восемь боеприпасов.
 ### <a name="_toc151741064"></a><a name="_toc158169076"></a><a name="_toc160586930"></a>Добрая надежда
 *4-й круг, очарование, бард, уникальное*
 
@@ -173,7 +173,7 @@ author: Антон "Palant" Палихов
 
 **Время сотворения:** 1 действие
 
-Диапазон: 30 футов
+**Дистанция:** 30 футов
 
 **Компоненты:** В, С, М (вода которой клерик обрызгивает существ или дым ладана которым их окуривает)
 
@@ -249,7 +249,7 @@ author: Антон "Palant" Палихов
 
 В вашей руке появляется клинок чистой силы. Мистический клинок наносит 1к8 силового урона и является фехтовальным, легким оружием, которым вы владеете.
 
-Мистический клинок исчезает, если вы наложили любой другой заговор.
+Мистический клинок исчезает, если вы сотворили любой другой заговор или выпускаете его из рук.
 
 Урон мистического клинка увеличивается до 2к8 на 5-м уровне, 3к8 на 11-м уровне и 4к8 на 17-м уровне.
 ### <a name="_toc151741160"></a><a name="_toc158169172"></a><a name="_toc160586940"></a>Магический доспех, великий
@@ -481,7 +481,7 @@ author: Антон "Palant" Палихов
 
 После сотворения этого заклинания, если вы повторите его до окончания короткого или длинного отдыха, вы должны совершить спасбросок Телосложения с помехой с КС равному вашему собственному КС заклинаний плюс количество раз, которое вы сотворяли это заклинание с момента последнего короткого или длинного отдыха. В случае неудачи вы теряете сознание на 1 минуту, и заклинание не срабатывает.
 ### <a name="_toc151741305"></a><a name="_toc158169317"></a><a name="_toc160586953"></a>Присоеденить посылающий камень
-6-й круг, трансмутация, волшебник
+*6-й круг, трансмутация, волшебник*
 
 **Время сотворения:** 10 минут
 
@@ -499,7 +499,7 @@ author: Антон "Palant" Палихов
 
 Традиционные методы уничтожения камней-отправителей разрушают добавленные камни, но так же действуют заклинания рассеивания магии и аналогичные заклинания, которые сотворяете на 6-м уровне и выше.
 ### <a name="_toc151741307"></a><a name="_toc158169319"></a><a name="_toc160586954"></a>Проводник
-5-й круг, очарование, рейнджер, волшебник
+*5-й круг, очарование, рейнджер, волшебник*
 
 **Время сотворения:** специальное 
 
@@ -525,7 +525,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты 
 
-Класс: клерик
+**Класс:** клерик
 
 Выберите пять желающих гуманоидов в пределах дистанции заклинания и назначьте одно из них чемпионом. Остальные четыре человека могут пожертвовать чемпиону часть своей силы и боевого мастерства. Выбор того, делать ли это, должен быть сделан сразу же после заклинания. 
 
@@ -533,7 +533,7 @@ author: Антон "Palant" Палихов
 
 Все штрафы и бонусы, полученные от этого заклинания, действуют до его окончания, независимо от того, осталась ли цель в пределах досягаемости или передумала.
 ### <a name="_toc151741384"></a><a name="_toc158169396"></a><a name="_toc160586956"></a>Стихийный заряд
-Заговор, эвокация
+*Заговор, эвокация*
 
 **Время сотворения:** 1 действие 
 
@@ -547,7 +547,7 @@ author: Антон "Palant" Палихов
 
 При достижении более высоких уровней это заклинание создает более одного заряда: два заряда на 5-м уровне, три заряда на 11-м уровне и четыре заряда на 17-м уровне. Вы должны выбрать одну и ту же стихию для всех зарядов. Вы можете направить заряды в одну и ту же цель или в разные. Для каждого заряда делайте отдельный бросок атаки.
 ### <a name="_toc151741385"></a><a name="_toc158169397"></a><a name="_toc160586957"></a>Стихийный клинок 
-2-й круг, эвокация
+*2-й круг, эвокация*
 
 **Время сотворения:** 1 действие 
 
@@ -579,7 +579,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 3-го или более высокого круга, урон увеличивается на 1к4 за каждый круг заклинания выше 2-го. 
 ### <a name="_toc151741386"></a><a name="_toc158169398"></a><a name="_toc160586958"></a>Стойкость к стихиям
-1-й круг, преграждение (ритуал)
+*1-й круг, преграждение (ритуал)*
 
 **Время сотворения:** 1 действие
 
@@ -593,7 +593,7 @@ author: Антон "Palant" Палихов
 
 Вы можете выбрать в качестве цели до 6 желающих существ. Существо, защищенное стойкостью к стихиям, не получает вреда от пребывания в условиях жары или холода. Оно автоматически успешно выполняет все Спасброски на устойчивость к воздействию погодных состояний Холод и Жара. Аналогичным образом защищается и снаряжение существа. Это заклинание не дает защиты от огня или холода, а также не защищает от других опасных факторов окружающей среды, таких как дым, недостаток воздуха и т.п.
 ### <a name="_toc151741396"></a><a name="_toc158169408"></a><a name="_toc160586959"></a>Тактическая точность 
-2-й круг, прорицание
+*2-й круг, прорицание*
 
 **Время сотворения:** 1 действие 
 
@@ -622,7 +622,7 @@ author: Антон "Palant" Палихов
 
 
 ### <a name="_toc151741428"></a><a name="_toc158169440"></a><a name="_toc160586961"></a>Фокальный камень
-5-й круг, трансмутация
+*5-й круг, трансмутация*
 
 **Время сотворения:** 1 действие
 
