--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -267,7 +267,7 @@ author: Антон "Palant" Палихов
 
 Это заклинание действует точно так же, как и заклинание "Доспехи мага", но не требует материальных компонентов, его можно наложить только на себя, а ваш базовый Класс Защиты на время действия становится равным 15 + модификатор ловкости. 
 ### <a name="_toc151741162"></a><a name="_toc158169174"></a><a name="_toc160586941"></a>Магическое облачение
-3-й круг, трансмутация<a name="_hlk160583668"></a>, волшебник, колдун, клерик, чародей
+*3-й круг, трансмутация<a name="_hlk160583668"></a>, волшебник, колдун, клерик, чародей*
 
 **Время сотворения:** 1 действие
 
@@ -283,7 +283,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 5-го круга или выше, бонус увеличивается до +2. При использовании ячейки заклинания 7-го круга или выше бонус увеличивается до +3.
 ### <a name="_toc151741166"></a><a name="_toc158169178"></a><a name="_toc160586942"></a>Мантия заклинаний
-6-й круг, преграждение, волшебник
+*6-й круг, преграждение, клерик*
 
 **Время сотворения:** 1 действие
 
@@ -293,20 +293,22 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 2 часов
 
-**Классы:** волшебник
+**Классы:** клерик
 
-Вы накладываете магическую ауру вокруг цели заклинания - одного существа, которого необходимо коснуться во время произнесения заклинания. Во время сотворения заклинания вы можете указать любую комбинацию заклинаний с защитой или активацией.
+Вы накладываете магическую ауру вокруг цели заклинания - одного существа, которого необходимо коснуться во время сотворения заклинания. Во время сотворения заклинания вы можете указать любую комбинацию заклинаний с защитой или активацией.
 
-Заклинания с защитой - это заклинания 4-го круга и ниже, которые вы можете подготовить (например, Волшебники могут выбрать любое заклинание из своих книг заклинаний) и от которых вы хотите защитить цель. Когда цель заклинания подвергается воздействию одного из указанных заклинаний, заклинатель полностью поглощает энергию входящего заклинания без каких-либо действий.
+**Заклинания с защитой** - это заклинания 4-го круга и ниже, которые вы можете подготовить (например, Волшебники могут выбрать любое заклинание из своих книг заклинаний) и от которых вы хотите защитить цель. Когда цель заклинания подвергается воздействию одного из указанных заклинаний, заклинатель полностью поглощает энергию входящего заклинания без каких-либо действий.  
 
-Активированные заклинания - это заклинания 4-го круга или ниже, которые вы знаете или приготовили, и которые будут сотворять заклинание на цель, когда поглощается заклинание не ниже того же уровня. Это заклинание сотворяете на цель заклинания как реакцию, вызванную поглощением заклятья. Активированные заклинания могут быть даже заклинаниями с Дистанцией на себя, что позволяет объекту заклинания получать заклинания, которые заклинатель не мог бы наложить на него в обычных условиях. Зачарованные заклинания не могут быть использованы для активации заклинаний более высокого уровня, чем заклинание, на которое они наложены.
+**Активированные заклинания** - это заклинания 4-го круга или ниже, которые вы знаете или приготовили, и которые будут сотворять заклинание на цель, когда поглощается заклинание не ниже того же уровня. Это заклинание сотворяете на цель заклинания как реакцию, вызванную поглощением заклятья. Активированные заклинания могут быть даже заклинаниями с Дистанцией на себя, что позволяет объекту заклинания получать заклинания, которые заклинатель не мог бы наложить на него в обычных условиях. Зачарованные заклинания не могут быть использованы для активации заклинаний более высокого уровня, чем заклинание, на которое они наложены.
 
-Например, Эвендур накладывает заклинание мантия на Глим. В качестве заклинаний он выбирает огненный шар и молнию, а в качестве активируемых заклинаний - мерцание и ускорение. Когда в Глим попадает огненный шар или молния, она может выбрать - в качестве реакции - немедленно стать мишенью для заклинания мерцания или ускорения.
+Суммарный уровень заклинаний с защитой и активируемых заклинаний должен быть не выше 4+ваш бонус владения.
+
+>Например, Эвендур накладывает заклинание мантия на Глим. В качестве заклинаний он выбирает огненный шар и молнию, а в качестве активируемых заклинаний - мерцание и ускорение. Когда в Глим попадает огненный шар или молния, она может выбрать - в качестве реакции - немедленно стать мишенью для заклинания мерцания или ускорения.
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 7-го или более высокого уровня, вы получаете одно дополнительное заклинание к вашему набору заклинаний, которые могут быть назначены как заклинания защиты или активации, за каждый уровень заклинания после 6-го. Кроме того, максимальный уровень заклинания становится не 4-м, а на два меньше используемого ячейки заклинания.
 ### <a name="_toc151741182"></a><a name="_toc158169194"></a><a name="_toc160586943"></a>Молниевый клинок
-Заговор, воплощение, волшебник, колдун, чародей
-
+*Заговор, воплощение, волшебник, колдун, чародей
+*
 **Время сотворения:** 1 действие
 
 **Дистанция:** на себя (в пределах досягаемости оружия)
@@ -334,6 +336,7 @@ author: Антон "Palant" Палихов
 **Классы:** клерик
 
 Выберите любое количество существ в пределах досягаемости. Пока заклинание не закончилось, каждая цель получает благословение богов, проявляющееся в бонусе +1 к КЗ, броскам атаки, броскам урона от оружия, проверкам характеристик и спасброскам.
+
 ### <a name="_toc151741184"></a><a name="_toc158169196"></a><a name="_toc160586945"></a>Молот
 *1-й круг, трансмутация, волшебник, колдун, чародей*
 
@@ -345,11 +348,13 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Мгновенно
 
+**Классы:**  волшебник, колдун, чародей
+
 Вы используете свой разум, чтобы напитать себя энергией, отчего малейшее прикосновение бьет как кувалда. Сделайте атаку заклинанием в ближнем бою по цели в пределах досягаемости. При попадании цель получает 1к8 дробящего урона и отталкивается от вас на 10 футов, если ее размер большой или меньше.
 
 **Используя более высокий круг:** Когда вы произносите это заклинание, используя ячейку заклинания 2-го круга или выше, вы наносите дополнительно 1к8 повреждений от ударов за каждую ячейку выше 1-го уровня.
 ### <a name="_toc151741188"></a><a name="_toc158169200"></a><a name="_toc160586946"></a>Наделить способностью к заклинаниям
-4-й круг, эвокация, волшебник
+*4-й круг, эвокация, волшебник*
 
 **Время сотворения:** 1 действие
 
@@ -359,7 +364,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Пока не рассеется или не сработает
 
-Класс: волшебник
+**Класс:** волшебник
 
 Вы передаете одно из подготовленных вами заклинаний и способность к его применению другому существу. Выбранное заклинание может быть не выше 3-го круга.
 
@@ -367,7 +372,7 @@ author: Антон "Palant" Палихов
 
 Чтобы произнести заклинание с вербальным компонентом, субъект должен уметь говорить. Для сотворения заклинания с соматическим компонентом у него должны быть гуманоидные руки. Чтобы произнести заклинание с материальным компонентом или фокусом, у субъекта должны быть материалы или фокус.
 ### <a name="_toc151741189"></a><a name="_toc158169201"></a><a name="_toc160586947"></a>Найти компаньона
-2-й круг, Воплощение, друид, рейнджер
+*2-й круг, Воплощение, друид, рейнджер*
 
 **Время сотворения:** 1 час
 
@@ -381,11 +386,11 @@ author: Антон "Palant" Палихов
 
 Вы связываетесь с духом-компаньоном, который принимает форму неестественно умного и преданного животного. Появляясь в незанятом пространстве в пределах дистанции, ваш компаньон принимает выбранную вами форму, например обезьяны, черного медведя, кабана, великана, барсука, гигантской ласки, мула, пантеры или волка (ГМ может разрешить вызывать в качестве компаньонов других средних или мелких зверей с показателем опасности 1/2 или ниже).
 
-3\. Компаньон имеет статистику выбранной формы, и вместо зверя становится небесным, фейским или дьявольским существом (на ваш выбор).
+Компаньон имеет статистику выбранной формы, и вместо зверя становится небесным, фейским или дьявольским существом (на ваш выбор).
 
-4\. Если интеллект вашего спутника равен 5 или меньше, его интеллект равен 8, и он может понимать один из языков, на которых вы говорите. Кроме того, пока он находится в радиусе 100 футов от вас, вы можете общаться с ним телепатически.
+Если интеллект вашего спутника равен 5 или меньше, его интеллект равен 8, и он может понимать один из языков, на которых вы говорите. Кроме того, пока он находится в радиусе 100 футов от вас, вы можете общаться с ним телепатически.
 
-5\. Ваш спутник действует самостоятельно, но всегда подчиняется вашим командам, и вы определяете его решения, отношение и т.д. так же, как и персонаж игрока. В бою он проявляет собственную инициативу и действует в свой ход.
+Ваш спутник действует самостоятельно, но всегда подчиняется вашим командам, и вы определяете его решения, отношение и т.д. так же, как и персонаж игрока. В бою он проявляет собственную инициативу и действует в свой ход.
 
 Когда у компаньона уменьшается количество хитов до 0, он исчезает, не оставляя после себя никакой физической формы. Вы также можете в любой момент отстранить компаньона от участия в бою, что приведет к его исчезновению. В любом случае, сотворив это заклинание, вы снова вызываете того же компаньона, восстановив максимальное количество его хитов.
 
@@ -403,11 +408,11 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 10 мин (время пения)
 
-Класс: клерик
+**Класс:** клерик
 
 Посредством заклинания напев клерик приносит особую благосклонность себе и своей группе и причиняет вред своим врагам. После сотворения напева, все броски атаки и урона, а также спасброски, сделанные союзниками клерика, которые могут его слышать и находятся в радиусе 30 футов от него , получают бонус +1, в то время как враги клерика, которые могут его слышать и находятся в радиусе 30 футов от него , получают штраф -1 на броски атаки, урона и спасброски. Заклинание длится до тех пор, пока заклинатель продолжает повторять мистические слоги и не двигается. Прерывание этого напева (такое как нарушенная Концентрация, схваченный заклинатель или заклинание тишина) прерывает заклинание. Если заклинание 3-го круга Молитва сотворено во время действия напева последователем того же религиозного убеждения (а не просто мировоззрения), эффект увеличивается до +2 и -2.
 ### <a name="_toc151741237"></a><a name="_toc158169249"></a><a name="_toc160586949"></a>Переписывание
-Заговор ,трансмутация, волшебник, бард
+*Заговор ,трансмутация, волшебник, бард*
 
 **Время сотворения:** 1 минута
 
@@ -417,11 +422,11 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Мгновенно
 
-Класс: волшебник, бард
+**Класс:** волшебник, бард
 
 Вы выбираете немагическое письмо, карту, произведение искусства, изображение или сцену в пределах досягаемости, а также чистую книгу, свиток или пергамент в пределах досягаемости. Выбранный текст или изображение переносится на чистую книгу, свиток или пергамент, как если бы он был написан или нарисован мастером-писцом или художником. Одного заклинания достаточно, чтобы расшифровать около 50 страниц текста и изображений.
 ### <a name="_toc151741271"></a><a name="_toc158169283"></a><a name="_toc160586950"></a>Последовательность заклинаний 
-6-й круг, очарование, волшебник
+*6-й круг, очарование, волшебник*
 
 **Время сотворения:** 1 действие 
 
@@ -515,7 +520,7 @@ author: Антон "Palant" Палихов
 
 Созданный таким образом проводник должен быть использован в течение 8 часов. По истечении этого времени его магия исчезает и пропадает. Одновременно можно использовать ограниченное число проводников. Их количество равно вашему модификатору заклинательной характеристики. 
 ### <a name="_toc151741345"></a><a name="_toc158169357"></a><a name="_toc160586955"></a>Сила чемпиона 
-5-й круг, трансмутация, клерик
+*5-й круг, трансмутация, клерик*
 
 **Время сотворения:** 1 действие 
 
@@ -690,7 +695,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 5-го круга, измените длительность на 10 минут. Когда вы сотворяете это заклинание, используя ячейку заклинания 6-го круга, измените длительность на 1 час. Когда вы сотворяете это заклинание, используя ячейку заклинания 7-го круга, измените длительность на 4 часа. Когда вы сотворяете это заклинание, используя ячейку заклинания 8-го круга, измените длительность на 8 часов. Когда вы сотворяете это заклинание, используя ячейку заклинания 9-го круга, измените длительность на 24 часа.
 ### <a name="_toc151741459"></a><a name="_toc158169471"></a><a name="_toc160586965"></a>Ярость 
-*2-й круг, очарование*
+*2-й круг, очарование, бард*
 
 **Время сотворения:** 1 действие
 
