--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -301,14 +301,15 @@ author: Антон "Palant" Палихов
 
 **Активированные заклинания** - это заклинания 4-го круга или ниже, которые вы знаете или приготовили, и которые будут сотворять заклинание на цель, когда поглощается заклинание не ниже того же уровня. Это заклинание сотворяете на цель заклинания как реакцию, вызванную поглощением заклятья. Активированные заклинания могут быть даже заклинаниями с Дистанцией на себя, что позволяет объекту заклинания получать заклинания, которые заклинатель не мог бы наложить на него в обычных условиях. Зачарованные заклинания не могут быть использованы для активации заклинаний более высокого уровня, чем заклинание, на которое они наложены.
 
-Суммарный уровень заклинаний с защитой и активируемых заклинаний должен быть не выше 4+ваш бонус владения.
+Суммарное количество выбранных заклинаний равно бонусу владения заклинателя. Мантия может поглотить 5 + бонус владения заклинателя кругов заклинаний, после чего действие заклинания прекращается.
 
 >Например, Эвендур накладывает заклинание мантия на Глим. В качестве заклинаний он выбирает огненный шар и молнию, а в качестве активируемых заклинаний - мерцание и ускорение. Когда в Глим попадает огненный шар или молния, она может выбрать - в качестве реакции - немедленно стать мишенью для заклинания мерцания или ускорения.
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 7-го или более высокого уровня, вы получаете одно дополнительное заклинание к вашему набору заклинаний, которые могут быть назначены как заклинания защиты или активации, за каждый уровень заклинания после 6-го. Кроме того, максимальный уровень заклинания становится не 4-м, а на два меньше используемого ячейки заклинания.
 ### <a name="_toc151741182"></a><a name="_toc158169194"></a><a name="_toc160586943"></a>Молниевый клинок
-*Заговор, воплощение, волшебник, колдун, чародей
-*
+
+*Заговор, воплощение, волшебник, колдун, чародей*
+
 **Время сотворения:** 1 действие
 
 **Дистанция:** на себя (в пределах досягаемости оружия)
