--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -299,9 +299,9 @@ author: Антон "Palant" Палихов
 
 **Заклинания с защитой** - это заклинания 4-го круга и ниже, которые вы можете подготовить (например, Волшебники могут выбрать любое заклинание из своих книг заклинаний) и от которых вы хотите защитить цель. Когда цель заклинания подвергается воздействию одного из указанных заклинаний, заклинатель полностью поглощает энергию входящего заклинания без каких-либо действий.  
 
-**Активированные заклинания** - это заклинания 4-го круга или ниже, которые вы знаете или приготовили, и которые будут сотворять заклинание на цель, когда поглощается заклинание не ниже того же уровня. Это заклинание сотворяете на цель заклинания как реакцию, вызванную поглощением заклятья. Активированные заклинания могут быть даже заклинаниями с Дистанцией на себя, что позволяет объекту заклинания получать заклинания, которые заклинатель не мог бы наложить на него в обычных условиях. Зачарованные заклинания не могут быть использованы для активации заклинаний более высокого уровня, чем заклинание, на которое они наложены.
+**Активированные заклинания** - это заклинания 4-го круга или ниже, которые вы знаете или приготовили, и которые будут сотворять заклинание на цель, когда поглощается заклинание не ниже того же уровня. Это заклинание сотворяете на цель заклинания как реакцию, вызванную поглощением заклятья. Активированные заклинания могут быть даже заклинаниями с Дистанцией на себя, что позволяет объекту заклинания получать заклинания, которые заклинатель не мог бы наложить на него в обычных условиях. Заклинания с защитой не могут быть использованы для активации заклинаний более высокого круга.
 
-Суммарное количество выбранных заклинаний равно бонусу владения заклинателя. Мантия может поглотить 5 + бонус владения заклинателя кругов заклинаний, после чего действие заклинания прекращается.
+Суммарное количество выбранных заклинаний равно бонусу владения заклинателя. Мантия может поглотить 5 + бонус владения заклинателя кругов заклинаний, после чего действие заклинания прекращается. 
 
 >Например, Эвендур накладывает заклинание мантия на Глим. В качестве заклинаний он выбирает огненный шар и молнию, а в качестве активируемых заклинаний - мерцание и ускорение. Когда в Глим попадает огненный шар или молния, она может выбрать - в качестве реакции - немедленно стать мишенью для заклинания мерцания или ускорения.
 
