--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -712,6 +712,26 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг:** За каждый круг ячейки выше 2-го это заклинание воздействует на еще одну цель, которой необходимо коснутся частью действия, использованного для его сотворения.
 
+### Якорь измерений
+
+*4-й круг, преграждение, Клерик, Чародей, Колдун, Волшебник*
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** 120 футов
+
+**Компоненты:** В, С
+
+**Длительность:** 1 минута
+
+**Классы:** Жрец, Чародей, Колдун, Волшебник
+
+
+Из вашей вытянутой руки вырывается зеленый луч, направленный в существо или предмет, который вы видите в пределах дистанции. Чтобы поразить цель, необходимо произвести атаку заклинанием. Этот луч автоматически попадает в объекты, которые не носят или не переносят. При попадании на цель не действуют заклинания телепортации (такие как дверь измерений и телепорт), перемещение между измерениями, астральных и эфирных путешествий.
+
+Якорь измерений не мешает перемещению существ, уже находящихся в эфирной или астральной форме в момент заклинания, а также не блокирует способность видеть другие измерения существования или воздействовать на них. Кроме того, якорь измерения не препятствует исчезновению вызванных существ по окончании заклинания вызова.
+
+**Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 5-го круга, измените длительность на 10 минут. Когда вы сотворяете это заклинание, используя ячейку заклинания 6-го круга, измените длительность на 1 час. Когда вы сотворяете это заклинание, используя ячейку заклинания 7-го круга, измените длительность на 4 часа. Когда вы сотворяете это заклинание, используя ячейку заклинания 8-го круга, измените длительность на 8 часов. Когда вы сотворяете это заклинание, используя ячейку заклинания 9-го круга, измените длительность на 24 часа.
 
 ---
 
