--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -306,6 +306,24 @@ author: Антон "Palant" Палихов
 >Например, Эвендур накладывает заклинание мантия на Глим. В качестве заклинаний он выбирает огненный шар и молнию, а в качестве активируемых заклинаний - мерцание и ускорение. Когда в Глим попадает огненный шар или молния, она может выбрать - в качестве реакции - немедленно стать мишенью для заклинания мерцания или ускорения.
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 7-го или более высокого уровня, вы получаете одно дополнительное заклинание к вашему набору заклинаний, которые могут быть назначены как заклинания защиты или активации, за каждый уровень заклинания после 6-го. Кроме того, максимальный уровень заклинания становится не 4-м, а на два меньше используемого ячейки заклинания.
+
+### МНЕМОНИЧЕСКИЙ УСИЛИТЕЛЬ 
+
+*4-й круг, трансмутация, волшебник*
+
+**Время сотворения:** 1 минута 
+
+**Компоненты:** В, С, М (кусок веревки, кровь черного дракона и чернила кальмара) 
+
+**Дистанция:** На себя 
+
+**Длительность:** 24 часа 
+
+**Классы:** волшебник
+
+Вы можете сотворяете это заклинание только один раз в день, до того, как начнете готовить заклинания на день. Выберите заклинания до пяти кругов (пять заклинаний 1-го круга, одно заклинание 1-го круга и два заклинания 2-го круга и т.п.) из списка заклинаний вашего класса. В течение 24 часов эти заклинания являются подготовленными вами. 
+
+
 ### <a name="_toc151741182"></a><a name="_toc158169194"></a><a name="_toc160586943"></a>Молниевый клинок
 
 *Заговор, воплощение, волшебник, колдун, чародей*
@@ -486,6 +504,24 @@ author: Антон "Palant" Палихов
 Все снаряжение, которое вы носите или надеваете, также увеличивается. Оружие ближнего боя увеличивает радиус действия на 5 футов, а атаки с его помощью наносят дополнительную кость урона оружия (например, двуручный меч будет наносить 4к6 урона). Оружие дальнего боя также наносит дополнительную кость урона, но дальность его действия не изменяется.
 
 После сотворения этого заклинания, если вы повторите его до окончания короткого или длинного отдыха, вы должны совершить спасбросок Телосложения с помехой с КС равному вашему собственному КС заклинаний плюс количество раз, которое вы сотворяли это заклинание с момента последнего короткого или длинного отдыха. В случае неудачи вы теряете сознание на 1 минуту, и заклинание не срабатывает.
+
+### Праведный щит
+
+*2-й круг, преграждение, клерик*
+
+**Время сотворения:** 1 действие
+
+**Дистанция:** 10 футов 
+
+**Компоненты:** В
+
+**Длительность:** Концентрация, до 1 минуты
+
+**Классы:** клерик
+
+Святая сила исходит от вас, защищая дружественных существ в пределах 10 футов от вас. На время действия каждое дружественное существо в области действия, включая вас, получает сопротивление дробящему, колющему и рубящему немагическому урону.
+
+
 ### <a name="_toc151741305"></a><a name="_toc158169317"></a><a name="_toc160586953"></a>Присоеденить посылающий камень
 *6-й круг, трансмутация, волшебник*
 
@@ -725,7 +761,6 @@ author: Антон "Palant" Палихов
 **Длительность:** 1 минута
 
 **Классы:** Жрец, Чародей, Колдун, Волшебник
-
 
 Из вашей вытянутой руки вырывается зеленый луч, направленный в существо или предмет, который вы видите в пределах дистанции. Чтобы поразить цель, необходимо произвести атаку заклинанием. Этот луч автоматически попадает в объекты, которые не носят или не переносят. При попадании на цель не действуют заклинания телепортации (такие как дверь измерений и телепорт), перемещение между измерениями, астральных и эфирных путешествий.
 
