--- a/src/content/posts/cored20rpg/magic-new-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-new-spells.mdx
@@ -307,7 +307,7 @@ author: Антон "Palant" Палихов
 
 **Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинания 7-го или более высокого уровня, вы получаете одно дополнительное заклинание к вашему набору заклинаний, которые могут быть назначены как заклинания защиты или активации, за каждый уровень заклинания после 6-го. Кроме того, максимальный уровень заклинания становится не 4-м, а на два меньше используемого ячейки заклинания.
 
-### МНЕМОНИЧЕСКИЙ УСИЛИТЕЛЬ 
+### Мнемонический усилитель
 
 *4-й круг, трансмутация, волшебник*
 
