--- a/src/content/singles/contact-us.mdx
+++ b/src/content/singles/contact-us.mdx
@@ -3,3 +3,14 @@ title: Связаться с нами
 description: Связаться с нами
 ---
 
+Связаться с нами можно на следующих площадках:
+
+[Телеграм](https://t.me/cyborgs_and_mages)
+
+[Discord](https://discord.gg/yrJqvCqU3w)
+
+[Youtube](https://www.youtube.com/channel/UC3TT91uEL3eb_S5ekF3U0bg)
+
+[VK](https://vk.com/cyborgsandmages)
+
+[Facebook](https://www.facebook.com/cyborgsandmages)
